--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,7 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:cardview-v7:21.0.0'
+    compile 'com.sothree.slidinguppanel:library:3.1.1'
     compile 'me.dm7.barcodescanner:zbar:1.8.2'
 }
