--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:cardview-v7:21.0.0'
     compile 'com.sothree.slidinguppanel:library:3.1.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'me.dm7.barcodescanner:zbar:1.8.2'
 }
